// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`externalAppOwner should use provided owner 1`] = `
{
  "schema": {
    "indexes": [
      {
        "name": "evolu_history_ownerId_timestamp",
        "sql": "create index evolu_history_ownerId_timestamp on evolu_history (
          "ownerId",
          "timestamp"
        )",
      },
      {
        "name": "evolu_history_ownerId_table_id_column_timestampDesc",
        "sql": "create unique index evolu_history_ownerId_table_id_column_timestampDesc on evolu_history (
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp" desc
        )",
      },
      {
        "name": "evolu_timestamp_index",
        "sql": "create index evolu_timestamp_index on evolu_timestamp (
        "ownerId",
        "l",
        "t",
        "h1",
        "h2",
        "c"
      )",
      },
    ],
    "tables": [
      {
        "columns": [
          "protocolVersion",
        ],
        "name": "evolu_version",
      },
      {
        "columns": [
          "clock",
          "appOwnerId",
          "appOwnerEncryptionKey",
          "appOwnerWriteKey",
          "appOwnerMnemonic",
        ],
        "name": "evolu_config",
      },
      {
        "columns": [
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp",
          "value",
        ],
        "name": "evolu_history",
      },
      {
        "columns": [
          "id",
          "title",
          "isCompleted",
          "categoryId",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "todo",
      },
      {
        "columns": [
          "id",
          "name",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "todoCategory",
      },
      {
        "columns": [
          "ownerId",
          "t",
          "h1",
          "h2",
          "c",
          "l",
        ],
        "name": "evolu_timestamp",
      },
    ],
  },
  "tables": [
    {
      "name": "evolu_version",
      "rows": [
        {
          "protocolVersion": 0,
        },
      ],
    },
    {
      "name": "evolu_config",
      "rows": [
        {
          "appOwnerEncryptionKey": "uint8:[176,184,97,218,198,34,195,43,62,39,189,137,148,170,87,108,226,12,196,233,204,222,233,31,126,1,165,170,15,208,115,18]",
          "appOwnerId": "Gm2rxDYibpjp9MLQYgnXO",
          "appOwnerMnemonic": "call brass keen rough true spy dream robot useless ignore anxiety balance chair start flame isolate coin disagree inmate enroll sea impose change decorate",
          "appOwnerWriteKey": "uint8:[223,255,201,168,127,27,26,188,250,180,237,65,254,6,128,233]",
          "clock": "1970-01-01T00:00:00.000Z-0000-5311b2b347ebc9cd",
        },
      ],
    },
    {
      "name": "evolu_history",
      "rows": [],
    },
    {
      "name": "todo",
      "rows": [],
    },
    {
      "name": "todoCategory",
      "rows": [],
    },
    {
      "name": "evolu_timestamp",
      "rows": [],
    },
  ],
}
`;

exports[`onInit callback should be called with correct parameters and can seed initial data 1`] = `
{
  "schema": {
    "indexes": [
      {
        "name": "evolu_history_ownerId_timestamp",
        "sql": "create index evolu_history_ownerId_timestamp on evolu_history (
          "ownerId",
          "timestamp"
        )",
      },
      {
        "name": "evolu_history_ownerId_table_id_column_timestampDesc",
        "sql": "create unique index evolu_history_ownerId_table_id_column_timestampDesc on evolu_history (
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp" desc
        )",
      },
      {
        "name": "evolu_timestamp_index",
        "sql": "create index evolu_timestamp_index on evolu_timestamp (
        "ownerId",
        "l",
        "t",
        "h1",
        "h2",
        "c"
      )",
      },
    ],
    "tables": [
      {
        "columns": [
          "protocolVersion",
        ],
        "name": "evolu_version",
      },
      {
        "columns": [
          "clock",
          "appOwnerId",
          "appOwnerEncryptionKey",
          "appOwnerWriteKey",
          "appOwnerMnemonic",
        ],
        "name": "evolu_config",
      },
      {
        "columns": [
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp",
          "value",
        ],
        "name": "evolu_history",
      },
      {
        "columns": [
          "id",
          "title",
          "isCompleted",
          "categoryId",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "todo",
      },
      {
        "columns": [
          "id",
          "name",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "todoCategory",
      },
      {
        "columns": [
          "ownerId",
          "t",
          "h1",
          "h2",
          "c",
          "l",
        ],
        "name": "evolu_timestamp",
      },
    ],
  },
  "tables": [
    {
      "name": "evolu_version",
      "rows": [
        {
          "protocolVersion": 0,
        },
      ],
    },
    {
      "name": "evolu_config",
      "rows": [
        {
          "appOwnerEncryptionKey": "uint8:[176,184,97,218,198,34,195,43,62,39,189,137,148,170,87,108,226,12,196,233,204,222,233,31,126,1,165,170,15,208,115,18]",
          "appOwnerId": "Gm2rxDYibpjp9MLQYgnXO",
          "appOwnerMnemonic": "call brass keen rough true spy dream robot useless ignore anxiety balance chair start flame isolate coin disagree inmate enroll sea impose change decorate",
          "appOwnerWriteKey": "uint8:[223,255,201,168,127,27,26,188,250,180,237,65,254,6,128,233]",
          "clock": "1970-01-01T00:00:00.011Z-0001-444f7f3c9b0b0e9d",
        },
      ],
    },
    {
      "name": "evolu_history",
      "rows": [
        {
          "column": "name",
          "id": "uint8:[247,77,201,176,118,213,170,192,5,178,204,172,253,153,9,84]",
          "ownerId": "uint8:[26,109,171,196,54,34,110,152,233,244,194,208,98,9,215,56]",
          "table": "todoCategory",
          "timestamp": "uint8:[0,0,0,0,0,11,0,0,68,79,127,60,155,11,14,157]",
          "value": "Not Urgent",
        },
        {
          "column": "createdAt",
          "id": "uint8:[247,77,201,176,118,213,170,192,5,178,204,172,253,153,9,84]",
          "ownerId": "uint8:[26,109,171,196,54,34,110,152,233,244,194,208,98,9,215,56]",
          "table": "todoCategory",
          "timestamp": "uint8:[0,0,0,0,0,11,0,0,68,79,127,60,155,11,14,157]",
          "value": "1970-01-01T00:00:00.009Z",
        },
        {
          "column": "title",
          "id": "uint8:[150,231,156,92,88,105,125,187,41,19,212,126,62,10,32,152]",
          "ownerId": "uint8:[26,109,171,196,54,34,110,152,233,244,194,208,98,9,215,56]",
          "table": "todo",
          "timestamp": "uint8:[0,0,0,0,0,11,0,1,68,79,127,60,155,11,14,157]",
          "value": "Try React Suspense",
        },
        {
          "column": "categoryId",
          "id": "uint8:[150,231,156,92,88,105,125,187,41,19,212,126,62,10,32,152]",
          "ownerId": "uint8:[26,109,171,196,54,34,110,152,233,244,194,208,98,9,215,56]",
          "table": "todo",
          "timestamp": "uint8:[0,0,0,0,0,11,0,1,68,79,127,60,155,11,14,157]",
          "value": "903JsHbVqsAFssys_ZkJV",
        },
        {
          "column": "createdAt",
          "id": "uint8:[150,231,156,92,88,105,125,187,41,19,212,126,62,10,32,152]",
          "ownerId": "uint8:[26,109,171,196,54,34,110,152,233,244,194,208,98,9,215,56]",
          "table": "todo",
          "timestamp": "uint8:[0,0,0,0,0,11,0,1,68,79,127,60,155,11,14,157]",
          "value": "1970-01-01T00:00:00.009Z",
        },
      ],
    },
    {
      "name": "todo",
      "rows": [
        {
          "categoryId": "903JsHbVqsAFssys_ZkJV",
          "createdAt": "1970-01-01T00:00:00.009Z",
          "id": "luecXFhpfbspE9R-Pgogm",
          "isCompleted": null,
          "isDeleted": null,
          "title": "Try React Suspense",
          "updatedAt": "1970-01-01T00:00:00.011Z",
        },
      ],
    },
    {
      "name": "todoCategory",
      "rows": [
        {
          "createdAt": "1970-01-01T00:00:00.009Z",
          "id": "903JsHbVqsAFssys_ZkJV",
          "isDeleted": null,
          "name": "Not Urgent",
          "updatedAt": "1970-01-01T00:00:00.011Z",
        },
      ],
    },
    {
      "name": "evolu_timestamp",
      "rows": [
        {
          "c": 1,
          "h1": 114802846535063,
          "h2": 275459410257506,
          "l": 2,
          "ownerId": "uint8:[26,109,171,196,54,34,110,152,233,244,194,208,98,9,215,56]",
          "t": "uint8:[0,0,0,0,0,11,0,0,68,79,127,60,155,11,14,157]",
        },
        {
          "c": 1,
          "h1": 129121913354445,
          "h2": 215983510005292,
          "l": 1,
          "ownerId": "uint8:[26,109,171,196,54,34,110,152,233,244,194,208,98,9,215,56]",
          "t": "uint8:[0,0,0,0,0,11,0,1,68,79,127,60,155,11,14,157]",
        },
      ],
    },
  ],
}
`;
